# treinaweb-projeto-pratico-fastapi-twjobs

./: .dockerignore  Dockerfile  README.md  compose.yaml  fly.toml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 00088768ec99_create_experiences_table.py  2b08fcbef77b_add_many_to_many_relationship_between_.py  2bba2b136850_create_candidates_table.py  521e5946ab7b_create_relashionship_between_jobs_and_.py  8203b49951e0_create_companies_table.py  85599fb46b3d_update_companies_table.py  907b461e7f13_create_jobs_table.py  97ceed6b96b9_create_skills_table.py  98cfb6dd7e81_add_unique_in_user_id_for_companies_.py  9ba2ebdac4df_create_applications_table.py  c0234345bbc1_create_users_table.py  c7e0a3192c6e_create_links_table.py  e5a3345b7cbb_create_educations_table.py
twjobs/: app.py  cli.py
twjobs/api/applications/: router.py  schemas.py
twjobs/api/auth/: router.py  schemas.py
twjobs/api/candidates/: router.py  schemas.py
twjobs/api/candidates/educations/: router.py  schemas.py
twjobs/api/candidates/experiences/: router.py  schemas.py
twjobs/api/candidates/links/: router.py  schemas.py
twjobs/api/candidates/skills/: router.py  schemas.py
twjobs/api/common/: schemas.py
twjobs/api/companies/: router.py  schemas.py
twjobs/api/jobs/: router.py  schemas.py
twjobs/api/skills/: router.py  schemas.py
twjobs/core/: config.py  db.py  dependencies.py  mail.py  models.py  security.py  template.py
twjobs/templates/: test.html
twjobs/templates/email/: application_confirmation.html  application_status_update.html  welcome.html
(+2 files in other folders)
